--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,8 @@
       <header>
         <h1>{{ site.title | default: site.github.repository_name }}</h1>
         <p>{{ site.description | default: site.github.project_tagline }}</p>
+        
+        <h2><a href="https://gganley.github.io/about">About</a></h2>
 
         {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
