Add Home to header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
         <h1>{{ site.title | default: site.github.repository_name }}</h1>
         <p>{{ site.description | default: site.github.project_tagline }}</p>
         
+        <h2><a href="https://gganley.github.io">Home</a></h2>
         <h2><a href="https://gganley.github.io/about">About</a></h2>
       </header>
       <section>
