--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
     <nav>
       <a href="{{ '/' | relative_url }}">{{ site.title }}</a>
       <a href="{{ '/blog' | relative_url }}">Blog</a>
+      <a href="{{ '/about' | relative_url }}">About</a>
     </nav>
   </header>
 
